--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+body, html {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     background-image: url('/pictures/windows-xp-background.jpg');
     background-size: cover;
