--- a/src/components/Icons/Icons.css
+++ b/src/components/Icons/Icons.css
@@ -1,14 +1,5 @@
-img {
-    width: 54px;
-    height: 54px;
-}
-
-button {
-    background-color: transparent;
-    border: none;
-}
-
 button:hover {
+    border: none;
     cursor: pointer;
 }
 
@@ -20,6 +11,12 @@ button:hover {
     justify-content: center;
     align-items: center;
     text-align: center;
+    padding-top: 10px;
+}
+
+.folder-icon img {
+    width: 54px;
+    height: 54px;
 }
 
 .my_computer-icon {
@@ -32,6 +29,26 @@ button:hover {
     text-align: center;
 }
 
+.my_computer-icon img {
+    width: 54px;
+    height: 54px;
+}
+
+.adobe-pdf {
+    width: 100px;
+    height: 86px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.adobe-pdf img {
+    width: 54px;
+    height: 54px;
+}
+
 .notepad-icon {
     width: 100px;
     height: 86px;
@@ -40,6 +57,11 @@ button:hover {
     justify-content: center;
     align-items: center;
     text-align: center;
+}
+
+.notepad-icon img {
+    width: 54px;
+    height: 54px;
 }
 
 .linkedin-logo {
@@ -52,6 +74,11 @@ button:hover {
     text-align: center;
 }
 
+.linkedin-logo img {
+    width: 54px;
+    height: 54px;
+}
+
 .github-logo {
     width: 100px;
     height: 86px;
@@ -62,6 +89,11 @@ button:hover {
     text-align: center;
 }
 
+.github-logo img {
+    width: 54px;
+    height: 54px;
+}
+
 .recycle_bin-icon {
     width: 100px;
     height: 86px;
@@ -70,6 +102,14 @@ button:hover {
     justify-content: center;
     align-items: center;
     text-align: center;
+    position: fixed;
+    bottom: 45px;
+    right: 8px;
+}
+
+.recycle_bin-icon img {
+    width: 54px;
+    height: 54px;
 }
 
 .icon-name {
@@ -80,4 +120,19 @@ button:hover {
     color: white;
     font-size: 13px;
     margin: 0;
+    font-family: Tahoma, sans-serif;
+}
+
+.about_me-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    bottom: 20%;
+    width: 500px;
+    left: 30%;
+    position: fixed;
+}
+
+.about_me-container p {
+    font-size: 13px;
 }
